--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
+    "@mui/system": "^7.0.1",
+    "@mui/types": "^7.4.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
